updating core files to fix functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <title>Rudy's First Quiz App</title>
 
 
@@ -20,7 +20,7 @@
                 <button class="btn">Answer 4</button>
         <div class="controls">
             <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="start-btn btn hide">Next</button>
+            <button id="next-btn" class="next-btn btn hide">Next</button>
             
 
 
