pushing out final touches

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Rudy's First Quiz App!</title>
 </head>
 <body>
+    <!-- start of main wrapper -->
   <div class="container">
     <div id="question-container" class="hide">
       <div id="question">Question</div>
@@ -24,5 +25,6 @@
       <button id="next-btn" class="next-btn btn hide">Next</button>
     </div>
   </div>
+  <!-- end of main wrapper -->
 </body>
 </html>
